--- a/index.html
+++ b/index.html
@@ -153,4 +153,115 @@
         Identifying barriers and showcasing strategies that respect faith, modesty,
         and community while increasing access and agency.
       </p>
-      <div aria-label="Quick links" class="
+      <div aria-label="Quick links" class="grid grid-2" role="group">
+        <a href="implementations.html">View Implementations →</a>
+        <a href="costings.html">See Costings →</a>
+      </div>
+
+      <!-- Added separated links -->
+      <div aria-label="Additional links" class="grid grid-2" role="group" style="margin-top:2rem; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));">
+        <a href="Inclusion_and_Policy.html" style="background-color:#28A745;">Inclusion and Policy →</a>
+        <a href="Logic_Model_Table.html" style="background-color:#007BFF;">Logic Model Table →</a>
+        <a href="Monitoring_Evaluation_Framework.html" style="background-color:#6f42c1;">Monitoring & Evaluation Framework →</a>
+      </div>
+    </div>
+    <figure class="hero-media">
+      <img src="images/boxing-group.jpg" alt="A group of Muslim women training in a boxing class, demonstrating inclusive sporting practice.">
+    </figure>
+  </section>
+
+  <!-- Main Content -->
+  <main id="main">
+    <section aria-labelledby="intro">
+      <h2 id="intro">Introduction &amp; Aims</h2>
+      <p>
+        This project explores how religious beliefs, particularly within Islam, influence participation in sports.
+        It aims to identify barriers and propose inclusive strategies that respect religious values while promoting
+        active engagement.
+      </p>
+    </section>
+
+    <section aria-labelledby="context">
+      <h2 id="context">Context</h2>
+      <ul>
+        <li>Modesty requirements (e.g., hijab, long sleeves)</li>
+        <li>Gender segregation in physical activities</li>
+        <li>Lack of representation (few Muslim female coaches)</li>
+        <li><strong>Example:</strong> <em>Muslim Women Boxing Initiative</em> – empowering Muslim women through culturally sensitive boxing programs</li>
+      </ul>
+    </section>
+
+    <section aria-labelledby="critical">
+      <h2 id="critical">Critical Theory and Sport</h2>
+      <p>
+        Critical theory helps examine power structures and cultural norms in sport. It promotes
+        <strong>agency</strong>—the ability to act independently and make choices—especially for marginalized groups.
+      </p>
+      <ul>
+        <li>Challenges dominant ideologies</li>
+        <li>Focuses on empowerment and cultural transformation</li>
+        <li>More agency-oriented than functionalism or conflict theory</li>
+      </ul>
+    </section>
+
+    <section aria-labelledby="agency">
+      <h2 id="agency">Agency</h2>
+      <p>Agency refers to the capacity of individuals to act independently. In sport, it means:</p>
+      <ul>
+        <li>Muslim women choosing to participate despite societal pressures</li>
+        <li>Creating inclusive spaces and programs</li>
+        <li>Having Muslim female coaches who advocate for their communities</li>
+      </ul>
+    </section>
+
+    <section aria-labelledby="tenets">
+      <h2 id="tenets">Major Tenets of Critical Theory in Sport</h2>
+      <ul>
+        <li>Power and inequality in sport</li>
+        <li>Cultural hegemony and marginalization</li>
+        <li>Resistance and social change</li>
+        <li>Sport as a space for identity and interaction</li>
+      </ul>
+    </section>
+
+    <section aria-labelledby="beyond">
+      <h2 id="beyond">Beyond Exploitation</h2>
+      <p>
+        Critical theory moves beyond seeing athletes as exploited labor. It views sport as a site for resistance,
+        expression, and transformation.
+      </p>
+    </section>
+
+    <section aria-labelledby="culture">
+      <h2 id="culture">Shaped by Interactions / Shaping Wider Culture</h2>
+      <p>
+        Sport is both influenced by and influences culture. Inclusive practices can reshape societal views on
+        Muslim women in sport.
+      </p>
+    </section>
+
+    <section aria-labelledby="change">
+      <h2 id="change">Potential for Change</h2>
+      <ul>
+        <li>Policy reforms (e.g., allowing religious attire)</li>
+        <li>Community initiatives (e.g., boxing programs)</li>
+        <li>Representation and leadership (e.g., Muslim female coaches)</li>
+      </ul>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p class="note">
+      © <span id="year"></span> Inclusivity in Sport • Built by Hamzah Khan
+      • <a href="implementations.html">Implementations</a>
+      • <a href="costings.html">Costings</a>
+    </p>
+  </footer>
+
+  <script>
+    // Dynamically set current year
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
