--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -1,3 +1,4 @@
+
 <section>
   <h2>Muslim Women in Boxing: Inclusion and Policy</h2>
 
@@ -20,11 +21,13 @@
       </ul>
     </li>
     <li>No explanation of policy interaction:
-      <p>Sport England’s https://www.sportengland.org/why-we-exist/uniting-the-movementUniting the Movement strategy</a> promotes equality and diversity across all sports, including boxing.</p>
+      <p>
+        Sport England’s <a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_blank">Uniting the Movement strategy</versity across all sports, including boxing.
+      </p>
     </li>
     <li>Lack of real-world initiatives:
-      <p>Programs by <atps://www.sportingequals.org.uk/Sporting Equals</a> supporting ethnic minority women in sport, and local Birmingham boxing clubs offering female-only sessions and private spaces.</p>
-    </li>
+      <p>
+        Programs by <a href="https://www.sportingequals.org.uk/" target="_blank">Sporting Equals</a> supporting ethnic minority women in sport, and local Birmingham boxing clubs offering female-only sessions and privatei>
   </ul>
 
   <h3>How to Improve</h3>
@@ -35,9 +38,7 @@
     <li>Include case studies or quotes from Muslim women boxers.</li>
     <li>Provide links to official strategies:
       <ul>
-        <li>https://www.sportengland.org/why-we-exist/uniting-the-movementSport England – Uniting the Movement</a></li>
-        <li>https://www.sportingequals.org.uk/</li>
-      </ul>
+        <li><a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_blank">Sport England – Uniting the Movement</a></tps://www.sportingequals.org.uk/" target="_blank">Sporting>
     </li>
     <li>Suggest practical steps for clubs:
       <ul>
