--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </div>
     </div>
     <figure class="hero-media">
-      <img src="images/boxing-group.jpg" alt="A group of Muslim women training in a boxing class, demonstrating inclusive sporting practice.">
+      <img src="imagesboxing-group.jpg" alt="A group of Muslim women training in a boxing class, demonstrating inclusive sporting practice.">
     </figure>
   </section>
 
