--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8"/>jp
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Religious Beliefs and Inclusivity in Sports</title>
   <link rel="stylesheet" href="styles.css"/>
