--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -23,7 +23,7 @@
     <li>No explanation of policy interaction:
       <p>
         Sport England’s 
-        <a href="ww.sportengland.org/why-we-exist/uniting-the-movement
+        <a href="https://www.sportengland.org/why-we-exng-the-movement
           Uniting the Movement strategy
         </a> 
         promotes diversity across all sports, including boxing.
@@ -51,7 +51,7 @@
     <li>Provide links to official strategies:
       <ul>
         <li>
-          https://www.sportengland.org/why-we-exist/uniting-the-movement
+          <a href="https://www.sportengland.org/why-we-exist/unitovement
             Sport England – Uniting the Movement
           </a>
         </li>
