--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -23,7 +23,7 @@
     <li>No explanation of policy interaction:
       <p>
         Sport England’s 
-        <a href="https://www.sportengland.org/why-we-exng-the-movement
+        <a href="https://england.org/why-we-exist/uniting-the-movement
           Uniting the Movement strategy
         </a> 
         promotes diversity across all sports, including boxing.
@@ -51,12 +51,12 @@
     <li>Provide links to official strategies:
       <ul>
         <li>
-          <a href="https://www.sportengland.org/why-we-exist/unitovement
+          https://www.sportengland.org/why-we-exist/uniting-the-movement
             Sport England – Uniting the Movement
           </a>
         </li>
         <li>
-          https://www.sportingequals.org.uk/
+          <a href="https://www.suals.org.uk/
             Sporting Equals
           </a>
         </li>
