--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -13,17 +13,17 @@
   <ul>
     <li>No reference to UK sport agencies that shape inclusion:
       <ul>
-        <li>Sport England</li>
-        <li>UK Sport</li>
-        <li>Active Partnerships</li>
-        <li>Birmingham City Council</li>
-        <li>Sporting Equals</li>
+        <li>https://www.sportengland.org/Sport England</a></li>
+        <li><a href="ww.uksport.gov.uk/UK Sport</a></li>
+        <li><a href="https://www.activepartnershipsve Partnerships</a></li>
+        <li>https://www.birmingham.gov.uk/Birmingham City Council</a></li>
+        <li><a href="https://www.sportingg.uk/Sporting Equals</a></li>
       </ul>
     </li>
     <li>No explanation of policy interaction:
       <p>
         Sport England’s 
-        <a href="https://england.org/why-we-exist/uniting-the-movement
+        https://www.sportengland.org/why-we-exist/uniting-the-movement
           Uniting the Movement strategy
         </a> 
         promotes diversity across all sports, including boxing.
@@ -46,28 +46,3 @@
       <p>
         Sport England works with local councils and Active Partnerships to ensure boxing clubs adopt inclusive practices, aligning with equality objectives.
       </p>
-    </li>
-    <li>Include case studies or quotes from Muslim women boxers.</li>
-    <li>Provide links to official strategies:
-      <ul>
-        <li>
-          https://www.sportengland.org/why-we-exist/uniting-the-movement
-            Sport England – Uniting the Movement
-          </a>
-        </li>
-        <li>
-          <a href="https://www.suals.org.uk/
-            Sporting Equals
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li>Suggest practical steps for clubs:
-      <ul>
-        <li>Female coaches</li>
-        <li>Flexible attire rules</li>
-        <li>Safe, private training environments</li>
-      </ul>
-    </li>
-  </ul>
-</section>
