--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -1,78 +1,64 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test Links - Muslim Women in Boxing</title>
-</head>
-<body>
-  <h1>Test Page: Muslim Women in Boxing</h1>
+<section>
+  <h2>Muslim Women in Boxing: Inclusion and Policy</h2>
 
-  <section>
-    <h2>Muslim Women in Boxing: Inclusion and Policy</h2>
+  <h3>What’s Good</h3>
+  <ul>
+    <li>Highlights the challenge of religious inclusion in a traditionally male-dominated sport.</li>
+    <li>Recognizes policy reforms such as allowing hijabs and modest attire in amateur and professional boxing.</li>
+    <li>Emphasizes the importance of representation and participation for Muslim women.</li>
+  </ul>
 
-    <h3>What’s Good</h3>
-    <ul>
-      <li>Highlights the challenge of religious inclusion in a traditionally male-dominated sport.</li>
-      <li>Recognizes policy reforms such as allowing hijabs and modest attire in amateur and professional boxing.</li>
-      <li>Emphasizes the importance of representation and participation for Muslim women.</li>
-    </ul>
+  <h3>What’s Missing</h3>
+  <ul>
+    <li>No reference to UK sport agencies that shape inclusion:
+      <ul>
+        <li>https://www.sportengland.org/Sport England</a></li>
+        <li>https://www.uksport.gov.uk/UK Sport</a></li>
+        <li>https://www.activepartnerships.org/Active Partnerships</a></li>
+        <li>https://www.birmingham.gov.uk/Birmingham City Council</a></li>
+        <li>https://www.sportingequals.org.uk/Sporting Equals</a></li>
+      </ul>
+    </li>
+    <li>No explanation of policy interaction:
+      <p>
+        Sport England’s 
+        <a href="https://www.sportengland.org/why-we-exist/uniting-the-movement  Uniting the Movement strategy
+        </a> 
+        promotes diversity across all sports, including boxing.
+      </p>
+    </li>
+    <li>Lack of real-world initiatives:
+      <p>
+        Programs by 
+        https://www.sportingequals.org.uk/
+          Sporting Equals
+        </a> 
+        supporting ethnic minority women in sport, and local Birmingham boxing clubs offering female-only sessions and private training.
+      </p>
+    </li>
+  </ul>
 
-    <h3>What’s Missing</h3>
-    <ul>
-      <li>No reference to UK sport agencies that shape inclusion:
-        <ul>
-          <li><a href="https://www.sportengland.org/" target="_i>
-          <li>https://www.uksport.gov.uk/UK Sport</a></li>
-          <li><a href="https://www.activepartnerships.org/" target="_/a></li>
-          <li>https://www.birmingham.gov.uk/Birmingham City Council</a></li>
-          <li><a href="https://www.sportingequalsporting Equals</a></li>
-        </ul>
-      </li>
-      <li>No explanation of policy interaction:
-        <p>
-          Sport England’s 
-          <a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" targeting the Movement strategy
-          </a> 
-          promotes diversity across all sports, including boxing.
-        </p>
-      </li>
-      <li>Lack of real-world initiatives:
-        <p>
-          Programs by 
-          https://www.sportingequals.org.uk/
-            Sporting Equals
-          </a> 
-          supporting ethnic minority women in sport, and local Birmingham boxing clubs offering female-only sessions and private training.
-        </p>
-      </li>
-    </ul>
-
-    <h3>How to Improve</h3>
-    <ul>
-      <li>Add a section on policy-agency collaboration:
-        <p>
-          Sport England works with local councils and Active Partnerships to ensure boxing clubs adopt inclusive practices, aligning with equality objectives.
-        </p>
-      </li>
-      <li>Include case studies or quotes from Muslim women boxers.</li>
-      <li>Provide links to official strategies:
-        <ul>
-          <li><a href="https://www.sportengland.org/why-we-exist/uniting-theSport England – Uniting the Movement</a></li>
-          <li>https://www.sportingequals.org.uk/Sporting Equals</a></li>
-        </ul>
-      </li>
-      <li>Suggest practical steps for clubs:
-        <ul>
-          <li>Female coaches</li>
-          <li>Flexible attire rules</li>
-          <li>Safe, private training environments</li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-</body>
-</html>
-
-                
+  <h3>How to Improve</h3>
+  <ul>
+    <li>Add a section on policy-agency collaboration:
+      <p>
+        Sport England works with local councils and Active Partnerships to ensure boxing clubs adopt inclusive practices, aligning with equality objectives.
+      </p>
+    </li>
+    <li>Include case studies or quotes from Muslim women boxers.</li>
+    <li>Provide links to official strategies:
+      <ul>
+        <li>https://www.sportengland.org/why-we-exist/uniting-the-movementSport England – Uniting the Movement</a></li>
+        <li><a href="https://www.sportingequals.org.uk Equals</a></li>
+      </ul>
+    </li>
+    <li>Suggest practical steps for clubs:
+      <ul>
+        <li>Female coaches</li>
+        <li>Flexible attire rules</li>
+        <li>Safe, private training environments</li>
+      </ul>
+    </li>
+  </ul>
+</section>
