--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -13,17 +13,18 @@
   <ul>
     <li>No reference to UK sport agencies that shape inclusion:
       <ul>
-        <li>https://www.sportengland.org/Sport England</a></li>
-        <li>https://www.uksport.gov.uk/UK Sport</a></li>
-        <li>https://www.activepartnerships.org/Active Partnerships</a></li>
-        <li>https://www.birmingham.gov.uk/Birmingham City Council</a></li>
-        <li>https://www.sportingequals.org.uk/Sporting Equals</a></li>
+        <li>Sport England</li>
+        <li>UK Sport</li>
+        <li>Active Partnerships</li>
+        <li>Birmingham City Council</li>
+        <li>Sporting Equals</li>
       </ul>
     </li>
     <li>No explanation of policy interaction:
       <p>
         Sport England’s 
-        <a href="https://www.sportengland.org/why-we-exist/uniting-the-movement  Uniting the Movement strategy
+        https://www.sportengland.org/why-we-exist/uniting-the-movement
+          Uniting the Movement strategy
         </a> 
         promotes diversity across all sports, including boxing.
       </p>
@@ -49,8 +50,15 @@
     <li>Include case studies or quotes from Muslim women boxers.</li>
     <li>Provide links to official strategies:
       <ul>
-        <li>https://www.sportengland.org/why-we-exist/uniting-the-movementSport England – Uniting the Movement</a></li>
-        <li><a href="https://www.sportingequals.org.uk Equals</a></li>
+        <li>
+          <a href="https://www.sportengland.org/why-we-exist/uniting-the-movement"   Sport England – Uniting the Movement
+          </a>
+        </li>
+        <li>
+          https://www.sportingequals.org.uk/
+            Sporting Equals
+          </a>
+        </li>
       </ul>
     </li>
     <li>Suggest practical steps for clubs:
