--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -1,4 +1,3 @@
-
 <section>
   <h2>Muslim Women in Boxing: Inclusion and Policy</h2>
 
@@ -23,7 +22,7 @@
     <li>No explanation of policy interaction:
       <p>
         Sport England’s 
-        https://www.sportengland.org/why-we-exist/uniting-the-movement
+        <a href="ww.sportengland.org/why-we-exist/uniting-the-movement
           Uniting the Movement strategy
         </a> 
         promotes diversity across all sports, including boxing.
@@ -51,7 +50,8 @@
     <li>Provide links to official strategies:
       <ul>
         <li>
-          <a href="https://www.sportengland.org/why-we-exist/uniting-the-movement"   Sport England – Uniting the Movement
+          https://www.sportengland.org/why-we-exist/uniting-the-movement
+            Sport England – Uniting the Movement
           </a>
         </li>
         <li>
