--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -21,45 +21,23 @@
     </li>
     <li>No explanation of policy interaction:
       <p>
-        Sport England’s 
-        <a href="ww.sportengland.org/why-we-exist/uniting-the-movement
-          Uniting the Movement strategy
-        </a> 
-        promotes diversity across all sports, including boxing.
+        Sport England’s <a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_blank">Uniting the Movement strategy</versity across all sports, including boxing.
       </p>
     </li>
     <li>Lack of real-world initiatives:
       <p>
-        Programs by 
-        https://www.sportingequals.org.uk/
-          Sporting Equals
-        </a> 
-        supporting ethnic minority women in sport, and local Birmingham boxing clubs offering female-only sessions and private training.
-      </p>
-    </li>
+        Programs by <a href="https://www.sportingequals.org.uk/" target="_blank">Sporting Equals</a> supporting ethnic minority women in sport, and local Birmingham boxing clubs offering female-only sessions and privatei>
   </ul>
 
   <h3>How to Improve</h3>
   <ul>
     <li>Add a section on policy-agency collaboration:
-      <p>
-        Sport England works with local councils and Active Partnerships to ensure boxing clubs adopt inclusive practices, aligning with equality objectives.
-      </p>
+      <p>Sport England works with local councils and Active Partnerships to ensure boxing clubs adopt inclusive practices, aligning with equality objectives.</p>
     </li>
     <li>Include case studies or quotes from Muslim women boxers.</li>
     <li>Provide links to official strategies:
       <ul>
-        <li>
-          https://www.sportengland.org/why-we-exist/uniting-the-movement
-            Sport England – Uniting the Movement
-          </a>
-        </li>
-        <li>
-          https://www.sportingequals.org.uk/
-            Sporting Equals
-          </a>
-        </li>
-      </ul>
+        <li><a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_blank">Sport England – Uniting the Movement</a></tps://www.sportingequals.org.uk/" target="_blank">Sporting>
     </li>
     <li>Suggest practical steps for clubs:
       <ul>
