--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -1,4 +1,4 @@
-<section>
+u<section>
   <h2>Muslim Women in Boxing: Inclusion and Policy</h2>
 
   <h3>What’s Good</h3>
@@ -21,7 +21,7 @@
     </li>
     <li>No explanation of policy interaction:
       <p>
-        Sport England’s <a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_blank">Uniting the Movement strategy</versity across all sports, including boxing.
+        Sport England’s <a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_blank">Uniting the Movement strategy</university across all sports, including boxing.
       </p>
     </li>
     <li>Lack of real-world initiatives:
