--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -1,4 +1,5 @@
-u<section>
+
+<section>
   <h2>Muslim Women in Boxing: Inclusion and Policy</h2>
 
   <h3>What’s Good</h3>
@@ -21,12 +22,14 @@ u<section>
     </li>
     <li>No explanation of policy interaction:
       <p>
-        Sport England’s <a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_blank">Uniting the Movement strategy</university across all sports, including boxing.
+        Sport England’s https://www.sportengland.org/why-we-exist/uniting-the-movementUniting the Movement strategy</a> promotes inclusivity across all sports, including boxing.
       </p>
     </li>
     <li>Lack of real-world initiatives:
       <p>
-        Programs by <a href="https://www.sportingequals.org.uk/" target="_blank">Sporting Equals</a> supporting ethnic minority women in sport, and local Birmingham boxing clubs offering female-only sessions and privatei>
+        Programs by <a href="https://www.sportingequals.org.uk/" target="_blankrt ethnic minority women in sport, and local Birmingham boxing clubs offer female-only sessions and private training.
+      </p>
+    </li>
   </ul>
 
   <h3>How to Improve</h3>
@@ -37,7 +40,9 @@ u<section>
     <li>Include case studies or quotes from Muslim women boxers.</li>
     <li>Provide links to official strategies:
       <ul>
-        <li><a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_blank">Sport England – Uniting the Movement</a></tps://www.sportingequals.org.uk/" target="_blank">Sporting>
+        <li><a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_ing the Movement</a></li>
+        <li><a href="https://www.suals.org.uk/Sporting Equals – Inclusion Programs</a></li>
+      </ul>
     </li>
     <li>Suggest practical steps for clubs:
       <ul>
