--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -22,12 +22,12 @@
     </li>
     <li>No explanation of policy interaction:
       <p>
-        Sport England’s https://www.sportengland.org/why-we-exist/uniting-the-movementUniting the Movement strategy</a> promotes inclusivity across all sports, including boxing.
+        Sport England’s <ttps://www.sportengland.org/why-we-exist/uniting-the-movementUniting the Movement strategy</a> promotes inclusivity across all sports, including boxing.
       </p>
     </li>
     <li>Lack of real-world initiatives:
       <p>
-        Programs by <a href="https://www.sportingequals.org.uk/" target="_blankrt ethnic minority women in sport, and local Birmingham boxing clubs offer female-only sessions and private training.
+        Programs by <a href="https://www.sportingequals.org.uk/" targeta> support ethnic minority women in sport, and local Birmingham boxing clubs offer female-only sessions and private training.
       </p>
     </li>
   </ul>
@@ -40,16 +40,3 @@
     <li>Include case studies or quotes from Muslim women boxers.</li>
     <li>Provide links to official strategies:
       <ul>
-        <li><a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_ing the Movement</a></li>
-        <li><a href="https://www.suals.org.uk/Sporting Equals – Inclusion Programs</a></li>
-      </ul>
-    </li>
-    <li>Suggest practical steps for clubs:
-      <ul>
-        <li>Female coaches</li>
-        <li>Flexible attire rules</li>
-        <li>Safe, private training environments</li>
-      </ul>
-    </li>
-  </ul>
-</section>
