--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -1,4 +1,3 @@
-
 <section>
   <h2>Muslim Women in Boxing: Inclusion and Policy</h2>
 
@@ -22,14 +21,12 @@
     </li>
     <li>No explanation of policy interaction:
       <p>
-        Sport England’s <ttps://www.sportengland.org/why-we-exist/uniting-the-movementUniting the Movement strategy</a> promotes inclusivity across all sports, including boxing.
+        Sport England’s <a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_blank">Uniting the Movement strategy</versity across all sports, including boxing.
       </p>
     </li>
     <li>Lack of real-world initiatives:
       <p>
-        Programs by <a href="https://www.sportingequals.org.uk/" targeta> support ethnic minority women in sport, and local Birmingham boxing clubs offer female-only sessions and private training.
-      </p>
-    </li>
+        Programs by <a href="https://www.sportingequals.org.uk/" target="_blank">Sporting Equals</a> supporting ethnic minority women in sport, and local Birmingham boxing clubs offering female-only sessions and privatei>
   </ul>
 
   <h3>How to Improve</h3>
@@ -40,3 +37,14 @@
     <li>Include case studies or quotes from Muslim women boxers.</li>
     <li>Provide links to official strategies:
       <ul>
+        <li><a href="https://www.sportengland.org/why-we-exist/uniting-the-movement" target="_blank">Sport England – Uniting the Movement</a></tps://www.sportingequals.org.uk/" target="_blank">Sporting>
+    </li>
+    <li>Suggest practical steps for clubs:
+      <ul>
+        <li>Female coaches</li>
+        <li>Flexible attire rules</li>
+        <li>Safe, private training environments</li>
+      </ul>
+    </li>
+  </ul>
+</section>
