--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -53,3 +53,62 @@
       </ul>
     </li>
   </ul>
+<div class="section">
+    <h2>UK Agencies and Policy Interaction: Creating Inclusive Boxing Pathways</h2>
+    <p>
+        Inclusive boxing development in the UK is shaped by a coordinated system of national agencies, 
+        community organisations, and local authorities. Together, they provide strategic leadership, 
+        funding, cultural expertise, and safeguarding guidance that enable clubs to create environments 
+        that are accessible and respectful for Muslim women and other underrepresented groups.
+    </p>
+
+    <img src="images/agency-infographic.png" alt="Infographic showing how UK sport agencies support inclusive boxing" />
+
+    <p>
+        <strong>Sport England</strong> leads this landscape through its <em>Uniting the Movement</em> strategy, 
+        which prioritises the reduction of inequalities in physical activity. Support from 
+        <strong>UK Sport</strong> strengthens this approach by establishing safeguarding and governance standards 
+        that influence practice across all levels of the sport system.
+    </p>
+
+    <p>
+        At a regional level, <strong>Active Partnerships</strong> help boxing clubs connect with funding streams, 
+        training opportunities, and community networks. <strong>Local authorities</strong>, such as 
+        Birmingham City Council, provide accessible facilities and community grants that make inclusive 
+        delivery feasible for grassroots clubs.
+    </p>
+
+    <p>
+        <strong>Sporting Equals</strong> adds essential cultural insight through targeted programmes that support 
+        ethnic minority women in sport. Their expertise helps boxing clubs develop culturally sensitive 
+        sessions that are trusted and valued by local Muslim communities.
+    </p>
+
+    <img src="images/women-boxing-session.jpg" alt="Women-only inclusive boxing session" />
+
+    <h3>Policy Frameworks</h3>
+    <p>
+        National frameworks such as the <strong>Equality Act 2010</strong>, 
+        <strong>Sport England’s Uniting the Movement</strong> strategy, and 
+        <strong>UK Coaching’s Safeguarding Standards</strong> ensure that inclusive practice is not optional 
+        but fundamental to responsible sport delivery in the UK.
+    </p>
+
+    <h3>Implications for Practice</h3>
+    <p>
+        Boxing clubs are expected to adopt flexible attire policies, offer female-only sessions, 
+        and create safe environments that respect cultural and religious needs. 
+        Partnerships with Active Partnerships and local councils can unlock funding and training support, 
+        while working with Sporting Equals ensures cultural sensitivity and strengthens community trust.
+    </p>
+
+    <h3>Example from Birmingham</h3>
+    <p>
+        Several Birmingham boxing clubs have collaborated with Sport England, Sporting Equals, and 
+        Birmingham City Council to deliver culturally sensitive female-only boxing sessions. 
+        These programmes have been supported by community sport grants and safeguarding training, 
+        demonstrating the effectiveness of policy-driven collaboration.
+    </p>
+
+    <img src="images/policy-flow-diagram.png" alt="Flow diagram illustrating how policy guides inclusive boxing practice" />
+</div>
