--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -110,5 +110,5 @@
         demonstrating the effectiveness of policy-driven collaboration.
     </p>
 
-    <img src="unnamed.png"images/policy-flow-diagram.png" alt="Flow diagram illustrating how policy guides inclusive boxing practice" />
+    <img src="unnamed.png" />
 </div>
