--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -109,6 +109,7 @@
         These programmes have been supported by community sport grants and safeguarding training, 
         demonstrating the effectiveness of policy-driven collaboration.
     </p>
-
-    <img src="unnamed.png" />
+ <figure class="hero-media">
+    <img src="unnamed.png" 
+      figure
 </div>
