--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -110,6 +110,8 @@
         demonstrating the effectiveness of policy-driven collaboration.
     </p>
  <figure class="hero-media">
-    <img src="unnamed.png" 
-      figure
+    <img src="unnamed.png" ">
+    </figure>
+  </section>
+     
 </div>
