--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -27,7 +27,7 @@
     </li>
     <li>Lack of real-world initiatives:
       <p>
-        Programs by <a href="https://www.sportingequals.org.uk/" target="_blank">Sporting Equals</a> supporting ethnic minority women in sport, and local Birmingham boxing clubs offering female-only sessions.
+        Programs by <a href="https://www.sportingequals.org.uk" target="_blank">Sporting Equals</a> supporting ethnic minority women in sport, and local Birmingham boxing clubs offering female-only sessions.
       </p>
     </li>
   </ul>
