--- a/implementations.html
+++ b/implementations.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>Implementation Plan for Inclusive Boxing Program</h1>
+    <h1>Implementation Plan for Inclusive Boxing Programme</h1>
     <p>This plan outlines the steps to launch and sustain a boxing initiative for Muslim women, respecting cultural and religious values.</p>
 
     <div class="phase">
