--- a/costings.html
+++ b/costings.html
@@ -1,22 +1,63 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Project Costings</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+        /* Base styles */
         body {
             font-family: Arial, sans-serif;
             margin: 40px;
             background-color: #f0f8ff;
             color: #333;
+            line-height: 1.6;
         }
+
+        /* Headings */
         h1 {
             color: #005f73;
+            margin-bottom: 10px;
         }
+        h2, h3 {
+            color: #0a9396;
+        }
+
+        /* Navigation */
+        nav {
+            background-color: #e0f7fa;
+            padding: 10px 12px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+        nav a {
+            color: #005f73;
+            text-decoration: none;
+            font-weight: bold;
+            margin-right: 12px;
+            padding: 8px 12px;
+            border-radius: 6px;
+            background: #ffffff;
+            border: 1px solid #b2ebf2;
+        }
+        nav a:hover, nav a:focus {
+            background: #b2ebf2;
+            outline: none;
+        }
+
+        /* Table */
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
+        }
+        caption {
+            caption-side: top;
+            font-weight: bold;
+            color: #005f73;
+            margin-bottom: 8px;
+            text-align: left;
         }
         th, td {
             border: 1px solid #ccc;
@@ -26,6 +67,16 @@
         th {
             background-color: #e0f7fa;
         }
+        tfoot th {
+            background-color: #d9f3f7;
+        }
+
+        /* Lists */
+        ul {
+            margin-top: 10px;
+        }
+
+        /* Image */
         img {
             display: block;
             margin: 20px auto;
@@ -33,41 +84,69 @@
             height: auto;
             border-radius: 8px;
         }
+
+        /* Info box */
+        .note {
+            background: #fff;
+            border-left: 4px solid #0a9396;
+            padding: 10px 12px;
+            border: 1px solid #d4eef1;
+            border-radius: 6px;
+            margin: 16px 0;
+        }
     </style>
 </head>
 <body>
+    <!-- Navigation (adjust hrefs to match your actual file names) -->
+    <nav aria-label="Primary">
+        index.htmlHome</a>
+        costings.htmlCostings</a>
+        implementations.htmlImplementations</a>
+        about.htmlAbout</a>
+    </nav>
+
     <h1>Costings for Muslim Women Boxing Initiative</h1>
     <p>This page outlines estimated costs, income sources, and outgoings for implementing a culturally sensitive boxing program.</p>
 
-    <table>
-        <tr>
-            <th>Item</th>
-            <th>Estimated Cost (£)</th>
-        </tr>
-        <tr>
-            <td>Venue Hire (6 months)</td>
-            <td>3,000</td>
-        </tr>
-        <tr>
-            <td>Equipment (gloves, pads, mats)</td>
-            <td>1,500</td>
-        </tr>
-        <tr>
-            <td>Coach Salary (part-time)</td>
-            <td>6,000</td>
-        </tr>
-        <tr>
-            <td>Marketing &amp; Outreach</td>
-            <td>800</td>
-        </tr>
-        <tr>
-            <td>Administrative Costs</td>
-            <td>700</td>
-        </tr>
-        <tr>
-            <th>Total Outgoings</th>
-            <th>12,000</th>
-        </tr>
+    <!-- Optional hero image (replace src with your image path) -->
+    images/boxing-session.jpg
+
+    <table aria-describedby="costing-summary">
+        <caption id="costing-summary">Estimated Outgoings (6-month pilot)</caption>
+        <thead>
+            <tr>
+                <th scope="col">Item</th>
+                <th scope="col">Estimated Cost (£)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Venue Hire (6 months)</td>
+                <td>3,000</td>
+            </tr>
+            <tr>
+                <td>Equipment (gloves, pads, mats)</td>
+                <td>1,500</td>
+            </tr>
+            <tr>
+                <td>Coach Salary (part-time)</td>
+                <td>6,000</td>
+            </tr>
+            <tr>
+                <td>Marketing &amp; Outreach</td>
+                <td>800</td>
+            </tr>
+            <tr>
+                <td>Administrative Costs</td>
+                <td>700</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th scope="row">Total Outgoings</th>
+                <th>12,000</th>
+            </tr>
+        </tfoot>
     </table>
 
     <h2>Income Sources</h2>
@@ -76,10 +155,36 @@
         <li>Community Donations: £2,000</li>
         <li>Participant Fees: £3,000</li>
         <li>Sponsorships: £2,000</li>
-        <li><strong>Crowdfunding via Crowdfunder:</strong> Applied (<a href="https://www.crowdfunder.co.uk/sports/w Campaign</a>)</li>
-        <li><strong>Sport England Small Grants Programme:</strong> £300–£15,000 (Applied)</li>
+        <li>
+            <strong>Crowdfunding via Crowdfunder:</strong>
+            Applied (
+            https://www.crowdfunder.co.uk/sportsCrowdfunder Campaigns</a>
+            )
+        </li>
+        <li>
+            <strong>Sport England Small Grants Programme:</strong>
+            £300–£15,000 (Applied) (
+            <a href="https://www.sportengland.org/funding/small-grant-programme" target="_blank" relails
+            </a>
+            )
+        </li>
     </ul>
 
-    <p><strong>Net Balance:</strong> £0 (Break-even, pending grant and crowdfunding approval)</p>
+    <div class="note">
+        <p><strong>Net Balance:</strong> £0 &mdash; currently break-even based on confirmed income (£12,000) against outgoings (£12,000). Additional grant and crowdfunding awards would create a surplus and allow expansion.</p>
+    </div>
 
     <h3>Crowdfunding Success Examples</h3>
+    <ul>
+        <li>Local community boxing club raising funds for new women-only sessions (e.g., equipment + venue time).</li>
+        <li>Grassroots campaign to subsidize fees for low-income participants to improve access.</li>
+        <li>Partnership-backed initiatives combining small grants with public donations for rapid startup.</li>
+    </ul>
+
+    <!-- Footer navigation -->
+    <nav aria-label="Secondary">
+        <a href="index.htmlome</a>
+        implementations.htmlGo to Implementations</a>
+    </nav>
+</body>
+</html>
