--- a/costings.html
+++ b/costings.html
@@ -99,7 +99,7 @@
 <body>
     <!-- Navigation (adjust hrefs to match your actual file names) -->
     <nav aria-label="Primary">
-        index.htmlHome</a>
+        <a href="lHome</a>
         costings.htmlCostings</a>
         implementations.htmlImplementations</a>
         about.htmlAbout</a>
@@ -158,33 +158,14 @@
         <li>
             <strong>Crowdfunding via Crowdfunder:</strong>
             Applied (
-            https://www.crowdfunder.co.uk/sportsCrowdfunder Campaigns</a>
+            <a href="https://www.crowdfunder.co.uk/sdfunder Campaigns</a>
             )
         </li>
         <li>
             <strong>Sport England Small Grants Programme:</strong>
-            £300–£15,000 (Applied) (
-            <a href="https://www.sportengland.org/funding/small-grant-programme" target="_blank" relails
-            </a>
-            )
+            £300–£15,000 (Applied)
+            <!-- No external link here to keep it to one link as requested -->
         </li>
     </ul>
 
     <div class="note">
-        <p><strong>Net Balance:</strong> £0 &mdash; currently break-even based on confirmed income (£12,000) against outgoings (£12,000). Additional grant and crowdfunding awards would create a surplus and allow expansion.</p>
-    </div>
-
-    <h3>Crowdfunding Success Examples</h3>
-    <ul>
-        <li>Local community boxing club raising funds for new women-only sessions (e.g., equipment + venue time).</li>
-        <li>Grassroots campaign to subsidize fees for low-income participants to improve access.</li>
-        <li>Partnership-backed initiatives combining small grants with public donations for rapid startup.</li>
-    </ul>
-
-    <!-- Footer navigation -->
-    <nav aria-label="Secondary">
-        <a href="index.htmlome</a>
-        implementations.htmlGo to Implementations</a>
-    </nav>
-</body>
-</html>
