--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -61,7 +61,7 @@
         that are accessible and respectful for Muslim women and other underrepresented groups.
     </p>
 
-    <img src="images/agency-infographic.png" alt="Infographic showing how UK sport agencies support inclusive boxing" />
+    <img src="policyFC.png" alt="Infographic showing how UK sport agencies support inclusive boxing" />
 
     <p>
         <strong>Sport England</strong> leads this landscape through its <em>Uniting the Movement</em> strategy, 
