--- a/Inclusion_and_Policy.html
+++ b/Inclusion_and_Policy.html
@@ -60,9 +60,9 @@
         funding, cultural expertise, and safeguarding guidance that enable clubs to create environments 
         that are accessible and respectful for Muslim women and other underrepresented groups.
     </p>
-
+<figure class="hero-media">
     <img src="policyFC.png" alt="Infographic showing how UK sport agencies support inclusive boxing" />
-
+<figure>
     <p>
         <strong>Sport England</strong> leads this landscape through its <em>Uniting the Movement</em> strategy, 
         which prioritises the reduction of inequalities in physical activity. Support from 
