--- a/costings.html
+++ b/costings.html
@@ -158,7 +158,7 @@
         <li>
             <strong>Crowdfunding via Crowdfunder:</strong>
             Applied (
-            <a href="https://www.crowdfunder.co.uk/sdfunder Campaigns</a>
+            <a href="https://www.crowdfunder.co.uk/sports" target="_blank">
             )
         </li>
         <li>
