--- a/costings.html
+++ b/costings.html
@@ -162,7 +162,7 @@
         <li>
             <strong>Sport England Small Grants Programme:</strong>
             £300–£15,000 (Applied)
-            <!-- No external link here to keep it to one link as requested -->
+            <a href= "https://www.sportengland.org/funding-and-campaigns/our-funding/historic-funds/small-grants-programme">
         </li>
     </ul>
 
