--- a/costings.html
+++ b/costings.html
@@ -155,7 +155,8 @@
         <li>Community Donations: £2,000</li>
         <li>Participant Fees: £3,000</li>
         <li>Sponsorships: £2,000</li>
-        <li>
+        <li> 
+            <strong>Croed funding</strong>
             <a href="https://www.crowdfunder.co.uk/sports" target="_blank">
             )
         </li>
