--- a/costings.html
+++ b/costings.html
@@ -82,7 +82,7 @@
     <h1>Costings for Muslim Women Boxing Initiative</h1>
     <p>This page outlines estimated costs, income sources, and outgoings for implementing a culturally sensitive boxing program.</p>
 
-    <img src="boxing-session.jpg" alt="Boxing session image">
+    <img src="boxing-session.png" alt="Boxing session image">
 
     <table aria-describedby="costing-summary">
         <caption id="costing-summary">Estimated Outgoings (6-month pilot)</caption>
