--- a/costings.html
+++ b/costings.html
@@ -81,7 +81,7 @@
 
     <h1>Costings for Muslim Women Boxing Initiative</h1>
     <p>This page outlines estimated costs, income sources, and outgoings for implementing a culturally sensitive boxing program.</p>
-
+class="hero-media">
     <img src="boxing-session.png" alt="Boxing session image">
 
     <table aria-describedby="costing-summary">
